--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: oauthlib
 Title: Build and Validate 'OAuth' Headers
 Description: Build and Validate 'OAuth' Headers.
-Version: 0.0.1.9100
+Version: 0.0.1.92
 Authors@R: c(
     person("Scott", "Chamberlain",
         role = c("aut", "cre"),
-        email = "sckott@protonmail.com",
+        email = "myrmecocystus@gmail.com",
         comment = c(ORCID = "orcid.org/0000-0003-1444-9135")))
 License: MIT + file LICENSE
-URL: https://github.com/ropenscilabs/oauthlib
-BugReports: http://github.com/ropenscilabs/oauthlib/issues
+URL: https://github.com/sckott/oauthlib
+BugReports: http://github.com/sckott/oauthlib/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 Imports:
